# ML-2025

./: .gitignore  main.py  pyproject.toml
practice-1/: Homework_1_clf_V_Melnyk.ipynb  Reference notebook.ipynb  Skoromnov_HA_1_reg.ipynb
practice-2/: Decision Trees reference.ipynb  Homework 2 (Decision Trees).ipynb  ha2_part2.ipynb
